# netsumap

./: .gitignore  README.md
app/netifidash/: pom.xml
async_websocket/: Caddyfile  README.md  __init__.py  app.py  config.py
async_websocket/test/: test.py
back_end/: README.md  app.py
back_end/models/: RedisAPI.py
backend/: pyproject.toml
backend/Docker/: Dockerfile
backend/models/util_models/: Email.py  backup.py
backend/src/backend/: app.py  config.py  init_app.py
backend/src/backend/models/: Session.py  UbiquiPy.py  UniFiNetAPI.py
backend/src/backend/models/util_models/: RedisDB.py  Utility.py  headers.py
backend/src/backend/templates/: 404.html  index.html  web_app.html
backend/templates/: 404.html  500.html  base.html  index.html  web_app.html
chat/: pyproject.toml
chat/src/chat/: __init__.py
core/: config.py
core-node/: Caddyfile  Dockerfile  app.py  config.py  dash_init.sh  dash_restart.sh  docker-compose.yml  init_app.py  netsumap_init.sh  netsumap_restart.sh  netsumap_run.sh
core-node/quartapp/: Dockerfile  app.py  config.py  init_app.py  netsumap_boot.sh  requirements.txt
core-node/templates/: base.html  callpy.html  index.html  web_app.html
core/templates/: base.html  web_app.html
dashboard/: Caddyfile  Dockerfile  app.py  dash_init.sh  dash_restart.sh  docker-compose.yml  init_app.py  netsudash_init.sh  netsudash_restart.sh  netsumap_init.sh  netsumap_restart.sh
dashboard/models/: PDF.py
dashboard/quartapp/: Dockerfile  app.py  init_app.py
dashboard/templates/: base.html  web_app.html
front_end/: app.py  config.py  init_app.py
front_end/templates/: consumer.html
frontend/: pyproject.toml
frontend/src/frontend/: app.py  config.py  init_app.py
frontend/src/frontend/template/: base.html  index.html
frontend/src/frontend/templates/: about.html  about_netifidash.html  base.html  home.html  index.html  web_app.html
frontend/src/frontend/templates/dashboard/: about_netifidash.html  home.html
loadbalancer/: lb_init.sh
loadbalancer/bird_configs/: LB_A_bird.conf  LB_C_bird.conf  bird_boot.service  bird_boot.sh  check_bird.sh
loadbalancer/caddy_configs/: Caddyfile  caddy.local  caddy_boot.service  caddy_boot.sh  check_caddy.sh
loadbalancer/configs/: Caddyfile
loadbalancer/fail2ban/: jail.local
loadbalancer/web/: 404.html  index.html
probe/: app.py  collect.py  config.py  docker-compose.yml  inf_init.sh  inf_run.sh  inf_unenroll.sh  init_app.py  probe.py  probe_cfg.sh  probe_init.sh  probe_start.sh  probe_stop.sh
probe/app/: app.py  config.py  init_app.py  probe_init.sh
probe/config/: cfg.py  enroll.sh  ping.py  prb_conf.sh  prb_enroll.sh  prb_init.sh  prb_run.sh  prb_unenroll.sh  probe_conf.py  requirements.txt  unenroll.sh
probe/init/: inf_init.sh  inf_run.sh  probe_start.py
probe/probe_main/: Dockerfile  app.py  config.py  init_app.py  requirements.txt
probe/quartapp/: app.py  (+4 more)
socket/: pyproject.toml
web_hook/: app.py  config.py
web_socket/: app.py  app_websocket.py  app_websocket_example.py  config.py  init_app.py
ws_server/: Dockerfile  app.py  config.py  init_app.py  ws_init.sh  ws_restart.sh
(+91 files in other folders)
