[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["D.B. <derek.baugh1775@gmail.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.19.6"
websockets = "^12.0"
hypercorn = "^0.17.3"
websocket-client = "^1.8.0"
quart-auth = "^0.10.1"
requests = "^2.32.3"
ipython = "^8.27.0"
fpdf2 = "^2.7.9"
nest-asyncio = "^1.6.0"
aiohttp = "^3.10.5"
aiodns = "^3.2.0"
grequests = "^0.7.0"
redis = {extras = ["hiredis"], version = "^5.0.8"}

[tool.poetry.scripts]
start = "backend:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
