[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["D.B. <derek.baugh1775@gmail.com>"]
readme = "README.md"
packages = [{include = "chat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.19.6"
asyncio = "^3.4.3"
hypercorn = "^0.17.3"
aioredis = "^2.0.1"

[tool.poetry.scripts]
start = "chat:run"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.8"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


