[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["D.B. <derek.baugh1775@gmail.com>"]
readme = "README.md"
packages = [{include = "frontend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.19.6"
hypercorn = "^0.17.3"
websocket-client = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
